--- a/formats/classical_roman_satirical_prose_technological_anxiety_complete.html
+++ b/formats/classical_roman_satirical_prose_technological_anxiety_complete.html
@@ -180,9 +180,11 @@
 </div>
 <h1 id="chapter-1">Chapter 1</h1>
 <h2 id="chapter-1-1">CHAPTER 1</h2>
-<p>The man in the toga was screaming at a potted fern. Not <em>at</em>
-it, precisely, but into the small, polished obsidian disc he held before
-its fronds, his face a contorted mask of senatorial outrage.</p>
+<p>Marcus’s new stylus scratched across the wax tablet with a sound like
+a dying insect. He glared at the thing—this “improvement” promised to
+double his dictation speed. Instead, it had eaten three drafts of his
+panegyric to the Emperor and now whispered faint, metallic curses in a
+language he did not know.</p>
 <p>“I have consulted the augurs!” he bellowed. “The flight of birds was
 unfavorable! The sacred chickens, I tell you, the sacred chickens would
 not eat! And yet you persist in this… this <em>profane</em> verdancy!
